--- a/dev/styles/partials/_aside.scss
+++ b/dev/styles/partials/_aside.scss
@@ -6,25 +6,31 @@ aside {
 	bottom: 0;
 	width: 20%;
 	position: relative;
-	min-width: 300px;
-	&.searched { // NEED FIXING AFTER
-		&:after {
-			content: "";
-			top: 5vh;
-			right: -10px;
-			border-right: 2px solid $white;
-			height: 90vh;
-			position: absolute;
-		}
-	}	
+	min-width: 290px;
+	 // NEED FIXING AFTER
+	&:after {
+		content: "";
+		top: 5vh;
+		right: -10px;
+		border-right: 2px solid $white;
+		height: 90vh;
+		position: absolute;
+	}
+	h1 {
+		text-decoration: underline;
+		margin: 5px 0;
+	}
 }
 header {
-	position: relative;
-	top: 5%;
-	padding-bottom: 4%;
-	margin: 0;
-	img {
-		display: none;
+	h1 {
+		text-decoration: none;
+		margin: 20px 0;
+		&:after{
+			content: "Revolve around your favourite artists!";
+			font-family: $font2;
+			font-size: 14px;
+			display: block;
+		}
 	}
 }
 
@@ -32,18 +38,18 @@ form {
 	display: flex;
 	flex-direction: column;
 	width: 90%;
-	margin: 20% auto 0;
+	margin: 0 auto;
 	border: 5px solid $white;
-	padding: 5%;
+	padding: 14px;
 	background: $pink0;
 	h2 {
-		margin: 0 0 5%;
+		margin: 0 0 14px;
 	}
 	input[type='text'] {
 		width: 100%;
 		border: none;
 		border-radius: 5px;
-		padding: 5%;
+		padding: 11px;
 		background: rgba(255,255,255,0.9);
 		box-shadow: 3px 3px 5px rgba(80,80,80,0.5);
 		&:focus {
@@ -52,13 +58,13 @@ form {
 			outline: 1px solid black;
 		}
 	}
-	input[type='submit'] {
+	button[type="submit"]{
 		border: none;
 		background: rgba(80,80,80,0.9);
 		width: 50%;
 		align-self: center;
 		margin: 0 auto;
-		padding: 3%;
+	    padding: 7px;
 		border-radius: 5px;
 		color: $white;
 		margin-top: 5%;
@@ -70,22 +76,95 @@ form {
 }
 
 #main-artist {
+	margin: 0 auto;
 	h2 {
-		padding: 5% 1%;
+		padding: 13px 0px;
 		font-size: 25px;
+		margin: 0;
 	}
 	.grid-item {
 		width: 90%;
 		background: $pink2;
-		margin-top: 10%;
-		margin-bottom: 0;
+		margin: 0 auto;
+		padding-bottom: 20px;
+		height: 52vh;
 	}
 
 	.img {
 		width: 12vw;
 		height: 12vw;
+		width: 197px;
+		height: 197px;
 		margin: 0 auto;
 		margin-bottom: 20px;
+	}
+	/* Landscape phones and down */
+	
+}
+#main-artist-2 {
+	display: none;
+}
+#submit-mobile {
+	display: none;
+}
+@media (max-width: 650px) {
+	#main-artist-1,#submit-desktop {
+		display: none;
+	}
+	#main-artist-2, #submit-mobile {
+		display: block;
+	}
+	#main-artist {
+		.grid-item {
+			height: auto;
+			width: 80%;			
+		}
+	}
 
+	aside {
+		position:static;
+		width: 	100%;
+		h1 {
+			text-decoration: none;
+		}
+	}
+	
+	aside form {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 90%;
+		margin: 0 auto;
+		label {
+			display: none;
+		}
+		input[type='text'] {
+			width: 80%;
+			border: none;
+			border-radius: 5px;
+			background: rgba(255,255,255,0.9);
+			box-shadow: 3px 3px 5px rgba(80,80,80,0.5);
+			height: 36px;
+			&:focus {
+				background: $white;
+				outline: 1px solid black;
+			}
+		}
+		button[type="submit"]{
+			border: none;
+			background: rgba(80,80,80,0.9);
+			width: 15%;
+			align-self: center;
+			text-align: center;
+			height: 36px;
+			color: $white;
+			margin-top: 0;
+			transition: all 0.3s;
+			span {
+				padding-right: 	11px;
+				position: relative;
+				top: -18px;
+			}
+		}
 	}
 }
