--- a/dev/styles/partials/_modalSearch.scss
+++ b/dev/styles/partials/_modalSearch.scss
@@ -1,51 +1,3 @@
-.opening {
-	width: 200vw;
-	position: relative;
-	header {
-		left: 20vw;
-		width: 60vw;
-		top: 10%;
-		font-size: 30px;
-		h1 {
-			&:after{
-				font-size: 18px;
-				position: relative;
-				left: 45px;
-				top: -15px;
-				display: block;
-			}
-		}
-		img {
-			width: 100px;
-			height: 101px;
-			border-radius: none;
-			top: 50px;
-			left: -20px;
-			position: relative;
-			border-radius: 0%; 
-			display: inline;
-		}
-		
-	}
-	form {
-		width: 60vw;
-		left: 20vw;
-		margin: 15% 0 0;
-		position: relative;
-		input[type='text'] {
-			text-align: center;
-			font-size: 25px;
-			padding: 4%;
-		}
-	}
-}
-$white: #FFFFFF;
-$off-white: #DFE0E6;
-$grey: #7C7D80;
-$dark-back: #121314;
-$light-back: #1C1C1F;
-$green: #84BD00;
-// INFO MODAL //
 #info-modal {
 	transition: opacity 1s auto;
 }
@@ -63,18 +15,18 @@ $green: #84BD00;
 .modal-content {
     margin: 0 auto;
     padding: 35px;
-    width: 45%;
-	background: $pink0;
-
-    max-width: 800px;
+    width: 50%;
+    min-width: 650px;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
     border-radius: 3px;
-    color: $dark-back;
-    background-color: $white;
+    color: $black;
+    background-color: $pink;
     opacity: 0.9;
-
+    h1 {
+        text-decoration: underline;
+    }
     h2, h3 {
     	text-transform: uppercase;
     }
@@ -84,23 +36,24 @@ $green: #84BD00;
     }
 
     h3 {
-    	color: $light-back;
+    	// color: $light-back;
     }
 
     p {
-    	line-height: 2rem;
+    	line-height: 1.8rem;
     	&:nth-child(7) {
-    		margin-bottom: -150px;
+    		// margin-bottom: -130px;
     	}
     }
     form {
     	display: flex;
     	flex-direction: column;
     	width: 90%;
-    	margin: 20% auto 0;
-    	border: 5px solid $white;
-    	padding: 5%;
-    	background: $pink0;
+    	margin: 0 auto;
+    	border: none;
+    	padding: 40px;
+        padding: 5%;
+    	background: $pink;
     	h2 {
     		margin: 0 0 5%;
     	}
@@ -108,7 +61,7 @@ $green: #84BD00;
     		width: 100%;
     		border: 1px solid $dark;
     		border-radius: 5px;
-    		padding: 5%;
+    		padding: 20px;
     		background: rgba(255,255,255,0.9);
     		box-shadow: 3px 3px 5px rgba(80,80,80,0.5);
   
@@ -119,14 +72,34 @@ $green: #84BD00;
     		width: 50%;
     		align-self: center;
     		margin: 0 auto;
-    		padding: 3%;
+    		padding: 15px;
     		border-radius: 5px;
     		color: $white;
-    		margin-top: 5%;
+    		margin-top: 10px;
     		transition: all 0.3s;
     		&:hover {
     			background: $dark;
     		}
     	}
+    }
+}
+
+@media (max-width: 650px) {
+    .modal-back {
+        position: absolute;
+        background-color: $pink;
+    }
+    .modal-content {
+        h1 {
+            margin-top: 0;
+        }
+        height: 100vh;
+        width: 100%;
+        min-width: 0;
+        overflow: visible;
+        top: 0%;
+        transform: translateY(0px);
+        padding: 30px;
+
     }
 }
